--- a/src/main/asciidoc/index_cn.adoc
+++ b/src/main/asciidoc/index_cn.adoc
@@ -20,13 +20,13 @@
 == !
 :description: 介绍ASF以及Apache之道的60分钟演讲
 :keywords: Apache之道
-:authors: 演讲者 
-:imagesdir: ../resources/images + \
+:authors: 演讲者 + \
 Craig Russell + \
 Justin Mclean + \
 姜宁 + \
 本演讲包含了 Bertrand Delacretaz, Roman Shaposhnik 以及其它ASF贡献者的工作
-image::ApacheLogo.png[]
+imagesdir: ../resources/images/
+image::../resources/images/ApacheLogo.png[]
 
 == 解读Apache
 {authors} +
