--- a/src/main/asciidoc/index_cn.adoc
+++ b/src/main/asciidoc/index_cn.adoc
@@ -26,7 +26,7 @@ Justin Mclean + \
 姜宁 + \
 本演讲包含了 Bertrand Delacretaz, Roman Shaposhnik 以及其它ASF贡献者的工作
 imagesdir: ../resources/images/
-image::../resources/images/ApacheLogo.png[]
+image::ApacheLogo.png[]
 
 == 解读Apache
 {authors} +
